--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,10 @@ doctype html
 html(ng-app='PollsApp')
   head
     title= title
-    link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous")
+    link(rel='stylesheet', href='https://storage.googleapis.com/code.getmdl.io/1.0.3/material.purple-deep_purple.min.css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='https://storage.googleapis.com/code.getmdl.io/1.0.3/material.min.js') 
   body
     block content
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js')
