--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,14 +1,16 @@
 doctype html
 html(lang='en', ng-app='PollsApp')
   head
+    base(href='/')
     title= title
     meta(name='viewport', content='initial-scale=1')
     link(rel='stylesheet' href='https://ajax.googleapis.com/ajax/libs/angular_material/0.10.0/angular-material.min.css')
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic')
     link(rel='stylesheet' href='./stylesheets/style.css')
-  body(layout='column')
+  body(layout='column', ng-controller='ApplicationController')
     block content
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js')
     script(src='https://ajax.googleapis.com/ajax/libs/angular_material/0.10.0/angular-material.min.js')
