Add Signup Controller / Core functionality @ userService 🍨 | Messages about login/singup results to views🍧 | Better Handling of the req results with front-end 🍦

--- a/views/parts/login.jade
+++ b/views/parts/login.jade
@@ -1,6 +1,6 @@
+.md-display-2(layout='row', layout-align='center center', flex='') {{LoginCtrl.message}}
 md-content(layout='row', layout-align='center center', flex='', layout-padding='', ng-if='!activeUser')
   form(flex='33', ng-submit='LoginCtrl.login(username, password)')
-    //- .md-display-3(layout='column') Login To Your Account.
     md-input-container
       label Username
       input(name='username', type='text', ng-model='LoginCtrl.username', required='')
