--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,1 +1,1 @@
-<md-content layout-align="center" layout-padding="layout-padding" layout="row"><h1>This is {{HomeCtrl.message}}</h1></md-content>
+<md-content layout="column" layout-align="center" layout-padding="" ng-if="!activeUser" flex-sm="75" flex-md="65" flex-lg="55" flex-gt-lg="35"><div layout="row" layout-align="center"><div class="md-title">This is {{HomeCtrl.message}}</div></div></md-content>
