--- a/views/index.jade
+++ b/views/index.jade
@@ -6,10 +6,12 @@ block content
       a(href='/')
         h3.md-display-3(layout='column') YourPolls
       span(flex)
-      a(href='api/login', ng-if='!activeUser')
+      a(href='api/login', ng-if='!isLoggedIn()')
         h3.md-display-3(layout='column') Login
-      a(href='api/signup', ng-if='!activeUser')
+      a(href='api/signup', ng-if='!isLoggedIn()')
         h3.md-display-3(layout='column') Signup
-      .md-title(layout='column', ng-if='activeUser')
-        | Signed in as {{activeUser.username}}
+      .md-title(layout='column', ng-if='isLoggedIn()')
+        | Signed in as {{activeUser}}
+      a(href='#', ng-if='isLoggedIn()', ng-click='logout()')
+        h3.md-display-3(layout='column') Logout
   ng-view(layout='row', flex, layout-align='center center')
