--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,18 +1,23 @@
 doctype html
 html(lang='en', ng-app='PollsApp')
   head
-    base(href='/')
     title= title
     meta(name='viewport', content='initial-scale=1')
+    base(href='/')
     link(rel='stylesheet' href='https://ajax.googleapis.com/ajax/libs/angular_material/0.10.0/angular-material.min.css')
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic')
+    link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/0.4.15/toaster.min.css')
     link(rel='stylesheet' href='./stylesheets/style.css')
-  body(layout='column', ng-controller='ApplicationController')
+  body(layout='column', ng-controller='ApplicationController as AppCtrl')
     block content
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js')
-    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-messages.min.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js')
     script(src='https://ajax.googleapis.com/ajax/libs/angular_material/0.10.0/angular-material.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.5.0/angular-material-icons.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/0.4.15/toaster.min.js')
+    script(src='//cdn.jsdelivr.net/satellizer/0.12.4/satellizer.min.js')
     script(src='./javascripts/app.js')
