--- a/views/parts/signup.jade
+++ b/views/parts/signup.jade
@@ -1,12 +1,16 @@
 md-content(layout='column', layout-align='center',
            layout-padding='', ng-if='!activeUser',
            flex-sm='75', flex-md='65', flex-lg='55', flex-gt-lg='35')
-  form(ng-submit='SignupCtrl.signup()')
+  div(layout='row', layout-align='center')
+    md-toolbar.content-toolbar
+      .md-toolbar-tools
+        .md-title(ng-bind='SignupCtrl.message')
+  form(ng-submit='SignupCtrl.signup()').md-whiteframe-z1
     md-input-container
       label Username
       input(name='username', type='text', ng-model='SignupCtrl.username', required='')
     md-input-container
       label Password
       input(name='password', type='password', ng-model='SignupCtrl.password', required='')
-    div(layout='column')
+    section(layout='column')
       md-button(class='md-raised md-primary', type='submit') Signup
