--- a/views/parts/home.jade
+++ b/views/parts/home.jade
@@ -1,5 +1,14 @@
 md-content(layout='column', layout-align='center',
            layout-padding='', ng-if='!activeUser',
-           flex-sm='75', flex-md='65', flex-lg='55', flex-gt-lg='35')
-  div(layout='row', layout-align='center')
-    .md-title This is {{HomeCtrl.message}}
+           flex-sm='', flex-md='65', flex-lg='55', flex-gt-lg='35')
+  //- div(layout='row', layout-align='center')
+  md-toolbar.content-toolbar
+    .md-toolbar-tools
+      .md-title(ng-bind='HomeCtrl.message')
+  md-content.md-whiteframe-z1(layout='column', layout-align='center center', ng-if='!HomeCtrl.isLoggedIn()')
+    p(flex='') Hey there mind logging in or signing up?
+    section(layout='row')
+      md-button(class='md-raised md-primary', ui-sref='login') Login
+      md-button(class='md-raised md-primary', ui-sref='signup') Signup
+  md-content.md-whiteframe-z1(layout='row', layout-align='center', ng-if='HomeCtrl.isLoggedIn()')
+    p Hey there thanks for logging in or signing up!
