--- a/views/parts/home.jade
+++ b/views/parts/home.jade
@@ -6,9 +6,11 @@ md-content(layout='column', layout-align='center',
     .md-toolbar-tools
       .md-title(ng-bind='HomeCtrl.message')
   md-content.md-whiteframe-z1(layout='column', layout-align='center center', ng-if='!HomeCtrl.isLoggedIn()')
-    p(flex='') Hey there mind logging in or signing up?
+    p(flex='') Hey there mind using buttons below to log in or sign up?
     section(layout='row')
       md-button(class='md-raised md-primary', ui-sref='login') Login
       md-button(class='md-raised md-primary', ui-sref='signup') Signup
-  md-content.md-whiteframe-z1(layout='row', layout-align='center', ng-if='HomeCtrl.isLoggedIn()')
-    p Hey there thanks for logging in or signing up!
+  md-content.md-whiteframe-z1(layout='column', layout-align='center center', ng-if='HomeCtrl.isLoggedIn()')
+    p Hey there thanks for logging in, use button below to log out!
+    section(layout='row')
+      md-button(class='md-raised md-primary', ui-sref='logout') Logout
