--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html(lang='en', ng-app='PollsApp')
     link(rel='stylesheet' href='https://ajax.googleapis.com/ajax/libs/angular_material/0.10.0/angular-material.min.css')
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/0.4.15/toaster.min.css')
+    link(rel='stylesheet' href='//cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.css')
     link(rel='stylesheet' href='./stylesheets/style.css')
   body(layout='column', ng-controller='ApplicationController as AppCtrl')
     block content
@@ -20,4 +21,6 @@ html(lang='en', ng-app='PollsApp')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.5.0/angular-material-icons.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/0.4.15/toaster.min.js')
     script(src='//cdn.jsdelivr.net/satellizer/0.12.4/satellizer.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js')
+    script(src='//cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js')
     script(src='./javascripts/app.js')
