--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,14 @@
   border: 1px solid red;
 }*/
 
+::-webkit-scrollbar              { width: 1px; }
+::-webkit-scrollbar-button       { /* 2 */ }
+::-webkit-scrollbar-track        { /* 3 */ }
+::-webkit-scrollbar-track-piece  { /* 4 */ }
+::-webkit-scrollbar-thumb        { /* 5 */ }
+::-webkit-scrollbar-corner       { /* 6 */ }
+::-webkit-resizer                { /* 7 */ }
+
 a {
   margin-left: 5px;
   margin-right: 5px;
@@ -19,4 +27,30 @@ a:hover {
 
 .content-toolbar {
   border-radius: 5px 5px 0 0;
+}
+
+/*canvas {
+  width: 100%;
+  height: 100%;
+}
+
+.chart-container {
+    width: 90%;
+    height: 90%;
+}*/
+
+.content-custom {
+  height: 100%;
+}
+
+md-card {
+    width: 90%;
+    height: 90%;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+
+  min-height: 400px;
 }
