--- a/views/parts/home.jade
+++ b/views/parts/home.jade
@@ -1,16 +1,24 @@
-md-content(layout='column', layout-align='center',
+md-content.content-custom(layout='column', layout-align='center',
            layout-padding='', ng-if='!activeUser',
-           flex-sm='', flex-md='65', flex-lg='55', flex-gt-lg='35')
+           flex-sm='', flex-md='65', flex-lg='65', flex-gt-lg='55')
   //- div(layout='row', layout-align='center')
   md-toolbar.content-toolbar
     .md-toolbar-tools
       .md-title(ng-bind='HomeCtrl.message')
   md-content.md-whiteframe-z1(layout='column', layout-align='center center', ng-if='!HomeCtrl.isLoggedIn()')
-    p(flex='') Hey there mind using buttons below to log in or sign up?
+    p Hey there mind using buttons below to log in or sign up?
     section(layout='row')
       md-button(class='md-raised md-primary', ui-sref='login') Login
       md-button(class='md-raised md-primary', ui-sref='signup') Signup
-  md-content.md-whiteframe-z1(layout='column', layout-align='center center', ng-if='HomeCtrl.isLoggedIn()')
-    p Hey there thanks for logging in, use button below to log out!
-    section(layout='row')
-      md-button(class='md-raised md-primary', ui-sref='logout') Logout
+  md-content.md-whiteframe-z1(layout='column', layout-align='center start', 
+                              layout-padding='', ng-if='HomeCtrl.isLoggedIn()')
+    form(disabled='', layout-fill='', layout-margin='', layout="column", flex='')
+      md-subheader Last Poll
+      md-radio-group()
+        div(layout='row', layout-align='space-between center',
+            ng-repeat='option in HomeCtrl.poll.options')
+          md-radio-button(ng-value ='option.option',
+                          ng-disabled='HomeCtrl.voteid',
+                          ng-bind='option.option')
+          label {{option.count}}
+      md-button(class='md-raised md-primary', ui-sref='polls') View All
