--- a/views/parts/poll.jade
+++ b/views/parts/poll.jade
@@ -4,7 +4,7 @@ md-content.content-custom(layout='column', layout-align='center',
   //- div(layout='row', layout-align='center')
   md-toolbar.content-toolbar(layout='row', ng-if='PollCtrl.isLoggedIn()')
     .md-toolbar-tools
-      .md-title(ng-bind='PollCtrl.poll.subject || "Poll"')
+      .md-title(ng-bind='PollCtrl.poll.subject || "404"')
   md-content.md-whiteframe-z1(layout='column', layout-align='center start', 
                               layout-padding='', ng-if='PollCtrl.isLoggedIn()')
     form(ng-if='!PollCtrl.errmsg', ng-submit='PollCtrl.sendVote()', layout-fill='', layout-margin='', layout="column", flex='')
